# phase A in stage 6