@@ -94,15 +94,54 @@ public class Polygon extends Geometry {
         return plane.getNormal(null);
     }
 
-    /**
-     * Returns the list of intersections of the ray with the polygon.
-     *
-     * @return the list of intersections of the ray with the polygon
-     */
+//    /**
+//     * Returns the list of intersections of the ray with the polygon.
+//     *
+//     * @return the list of intersections of the ray with the polygon
+//     */
+//    @Override
+//    public List<Point> findIntersections(Ray ray) {
+//        // Step 1: check intersection with the plane
+//        List<Point> intersection = plane.findIntersections(ray);
+//        if (intersection == null) {
+//            return null;
+//        }
+//
+//        Point p0 = ray.getHead();
+//        Vector dir = ray.getDirection();
+//
+//        int size = vertices.size();
+//        Vector v1 = vertices.get(size - 1).subtract(p0);
+//        Vector v2 = vertices.get(0).subtract(p0);
+//
+//        // first cross product
+//        Vector n = v1.crossProduct(v2).normalize();
+//        double sign = alignZero(dir.dotProduct(n));
+//
+//        if (isZero(sign)) return null;
+//
+//        boolean positive = sign > 0;
+//
+//        // Step 2: check all edges
+//        for (int i = 1; i < size; i++) {
+//            v1 = v2;
+//            v2 = vertices.get(i).subtract(p0);
+//            n = v1.crossProduct(v2).normalize();
+//            sign = alignZero(dir.dotProduct(n));
+//
+//            if (isZero(sign) || (sign > 0) != positive) {
+//                return null; // point is outside the polygon
+//            }
+//        }
+//
+//        return intersection; // valid intersection
+//    }
+
+
     @Override
-    public List<Point> findIntersections(Ray ray) {
+    public List<Intersection> calculateIntersectionsHelper(Ray ray) {
         // Step 1: check intersection with the plane
-        List<Point> intersection = plane.findIntersections(ray);
+        Point intersection = plane.findIntersectionsPoint(ray);
         if (intersection == null) {
             return null;
         }
@@ -112,7 +151,7 @@ public class Polygon extends Geometry {
 
         int size = vertices.size();
         Vector v1 = vertices.get(size - 1).subtract(p0);
-        Vector v2 = vertices.get(0).subtract(p0);
+        Vector v2 = vertices.getFirst().subtract(p0);
 
         // first cross product
         Vector n = v1.crossProduct(v2).normalize();
@@ -134,7 +173,8 @@ public class Polygon extends Geometry {
             }
         }
 
-        return intersection; // valid intersection
-    }
+        // If we reach here, the intersection point is valid and lies within the polygon
+        return List.of(new Intersection(this, intersection));
 
+    }
 }
